# memory-accessor

control/: .gitignore  README.md  pyproject.toml
control/src/RegisterAccessor/: RegisterMap.py  adapter.py  controller.py  device.py  main.py
control/src/RegisterAccessor/adxdma/: AdxdmaLib.py  accessor.py
control/src/RegisterAccessor/base/: base_controller.py  base_mem_accessor.py
control/src/RegisterAccessor/xdma/: accessor.py
control/src/memoryaccessor/: adapter.py  adxdmaAccessor.py  controller.py  device.py
control/src/memoryaccessor/adxdma/: AdxdmaLib.py  accessor.py
control/src/memoryaccessor/base/: base_mem_accessor.py
control/src/memoryaccessor/xdma/: accessor.py
control/web/config/: odin.cfg
